tests/error/quotientInteger-wrong-1st-argument-list-integer-.uplc
(program 1.0.0[[(builtin quotientInteger)(con list(integer) [42, 10, 53])](con integer 10)])